--- a/Model/visualization/src/style.css
+++ b/Model/visualization/src/style.css
@@ -2,4 +2,14 @@ body {
     margin: 0;
     overflow: hidden;
 }
-  
+
+.tp-container {
+	position: absolute;
+	top: 10px;
+}
+#pane-left {
+	left: 10px;
+}
+#pane-right {
+	right: 10px;
+}
